<?xml version="1.0"?>
<package format="2">
  <name>phylax_launchpad</name>
  <version>0.1.0</version>
  <description>The phylax_launchpad package</description>

  <maintainer email="i.piperakis@gmail.com">Joseph Piperakis</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/phylax_launchpad</url> -->
  <author email="i.piperakis@gmail.com">Joseph Piperakis</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>rosserial_tivac</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rosserial_client</build_export_depend>
  <build_export_depend>rosserial_tivac</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>rosserial_tivac</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  
  </export>
</package>
